fix for nsbeta2+ bug 34426 r=smfr (crash when closing popup windows)